# kest

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  test_debug.py
.github/workflows/: release.yml
docs/: index.md
docs/design/: kest_impl_guide_v0.3.0.md  kest_spec_v0.1.0.md  kest_spec_v0.3.0.md
examples/: flow.py  lineage_integrity_demo.ipynb  trust_score_demo.ipynb  trust_score_demo.py
src/kest/: __init__.py  config.py
src/kest/cli/: viz.py
src/kest/core/: crypto.py  crypto_test.py  environment.py  helpers.py  models.py  models_test.py  policy.py  policy_test.py  storage.py  storage_test.py  telemetry.py
src/kest/presentation/: decorators.py  decorators_test.py  defaults.py  defaults_test.py
tests/: async_flow_test.py  flow_test.py  trust_score_test.py
